--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,7 +1,7 @@
 @import "partials/partials";
 .welcome-cover{
     border-radius: 12px;
-    // border: 1px solid #292D32;
+    border: 1px solid transparent;
     background: $primary-light;
     padding: 20px 55px 30px;
     align-items: center;
