--- a/css/home.css
+++ b/css/home.css
@@ -11,6 +11,7 @@
 /* placeholder mixin */
 .welcome-cover {
   border-radius: 12px;
+  border: 1px solid transparent;
   background: #fff;
   padding: 20px 55px 30px;
   align-items: center; }
