--- a/css/modal.css
+++ b/css/modal.css
@@ -456,6 +456,9 @@
   .logout-modal-body .btn-cover .btn {
     padding: 8px 15px !important;
     width: 120px; } }
+@media (max-width: 1679px) {
+  .crate-stake-modal .modal-body {
+    padding-top: 0; } }
 .crate-stake-modal .crate-stake-modal-body {
   padding: 15px 64px 70px; }
   @media (max-width: 1679px) {
@@ -1108,5 +1111,62 @@
 @media (max-width: 579px) {
   .choose-avatar-modal .choose-avatar-modal-body {
     padding: 0 0 20px; } }
+.custom-modal .inp-block-modal textarea.custom-inp-img-area {
+  height: 132px;
+  resize: none; }
+  @media (max-width: 1679px) {
+    .custom-modal .inp-block-modal textarea.custom-inp-img-area {
+      height: 102px; } }
+.custom-modal .banner-img-block .custom-inp {
+  padding: 0;
+  overflow: hidden; }
+.custom-modal .banner-img-block .form-label {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap; }
+  .custom-modal .banner-img-block .form-label .form-label-main {
+    display: flex;
+    align-items: center;
+    flex: 1 1 auto; }
+    .custom-modal .banner-img-block .form-label .form-label-main img {
+      margin-left: 5px; }
+  .custom-modal .banner-img-block .form-label .img-type {
+    font-size: 9px;
+    flex: 0 0 auto; }
+.custom-modal .banner-img-block .inp-banner-box {
+  position: relative; }
+  .custom-modal .banner-img-block .inp-banner-box .banner-img-inp {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1; }
+  .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: 130px; }
+    @media (max-width: 1679px) {
+      .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label {
+        height: 100px; } }
+    .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label .def-img {
+      filter: brightness(0) saturate(100%) invert(36%) sepia(37%) saturate(616%) hue-rotate(185deg) brightness(92%) contrast(88%); }
+      @media (max-width: 1679px) {
+        .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label .def-img {
+          width: 30px; } }
+    .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label .banner-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+  .custom-modal .banner-img-block .inp-banner-box .img-remove-btn {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    padding: 0;
+    line-height: 0;
+    background-color: transparent; }
 
 /*# sourceMappingURL=modal.css.map */
