--- a/scss/header.scss
+++ b/scss/header.scss
@@ -7,6 +7,54 @@
     min-height: 85px;
     .header-title-block{
         display: flex;
+        .dropdown-toggle::after{
+            margin-left: 18px;
+            @media (max-width: 1199px) {
+                margin-left: 8px;
+            }
+        }
+        .live-active{
+            .label-web{
+                margin-right: 5px;
+            }
+        }
+        .dropdown-menu{
+            border-radius: 10px;
+            background: #FFF;
+            box-shadow: 0px 6px 9px 5px rgba(0, 0, 0, 0.06);
+            border: none;
+            padding: 5px;
+            margin-top: 20px !important;
+            min-width: 190px;
+            .dropdown-item{
+                display: flex;
+                align-items: center;
+                border-radius: 8px;
+                height: 52px;
+                font-size: 13px;
+                color: $primary-dark;
+                transition: .3s;
+                .status{
+                    margin-top: -2px;
+                    width: 8px;
+                    height: 8px;
+                    display: inline-block;
+                    background-color: #343333;
+                    margin-right: 12px;
+                    border-radius: 50%;
+                    &.active{
+                        background-color: #009518;
+                    }
+                }
+                &:hover{
+                    background: #F0F1F9;
+                }
+                &.item-disbaled{
+                    opacity: .5;
+                    cursor: not-allowed;
+                }
+            }
+        }
         .header-title{
             margin-bottom: 0;
             color: $primary-dark;
@@ -14,7 +62,8 @@
             font-weight: 700;
         }
         .live-active{
-            display: inline-block;
+            display: inline-flex;
+            align-items: center;
             white-space: unset;
             max-width: none;
             opacity: 1 !important;
@@ -428,6 +477,9 @@
     .theme-toggle-btn-block{
         display: inline-flex;
         margin-right: 25px;
+        @media (max-width: 1441px) {
+            margin-right: 15px;
+        }
         .theme-toggle-btn{
             display: inline-flex;
             align-items: center;
@@ -817,7 +869,7 @@
             position: absolute;
             top: -45px;
             right: 0;
-            z-index: 1;
+            z-index: 2;
         }
         &.header-offline{
             position: static;
