--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -580,6 +580,11 @@
 
 // Create stake
 .crate-stake-modal{
+    .modal-body{
+        @media($sm-1679){
+            padding-top: 0;
+        }
+    }
     .crate-stake-modal-body{
         padding: 15px 64px 70px;
         @media($sm-1679){
@@ -657,6 +662,11 @@
             }
         }
     }
+    // .inp-block-modal {
+    //     @media($sm-1679){
+    //         margin-bottom: 20px;
+    //     }
+    // }
 }
 .success-modal
 {
@@ -1479,5 +1489,78 @@
 @media($sm-579){
     .choose-avatar-modal .choose-avatar-modal-body {
         padding: 0 0 20px;
+    }
+}
+.custom-modal{
+    .inp-block-modal textarea.custom-inp-img-area{
+        height: 132px;
+        resize: none;
+        @media ($sm-1679) {
+            height: 102px;
+        }
+    }
+    .banner-img-block{
+        .custom-inp{
+            padding: 0;
+            overflow: hidden;
+        }
+        .form-label{
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            .form-label-main{
+                display: flex;
+                align-items: center;
+                flex: 1 1 auto;
+                img{
+                    margin-left: 5px;
+                }
+            }
+            .img-type{
+                font-size: 9px;
+                flex: 0 0 auto;
+            }
+        }
+        .inp-banner-box{
+            position: relative;
+            .banner-img-inp{
+                width: 0.1px;
+                height: 0.1px;
+                opacity: 0;
+                overflow: hidden;
+                position: absolute;
+                z-index: -1;
+            }
+            .banner-img-inp-label{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                height: 130px;
+                @media ($sm-1679) {
+                    height: 100px;
+                }
+                .def-img{
+                    filter: brightness(0) saturate(100%) invert(36%) sepia(37%) saturate(616%) hue-rotate(185deg) brightness(92%) contrast(88%);
+                    @media ($sm-1679) {
+                        width: 30px;
+                    }
+                }
+                .banner-img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            .img-remove-btn{
+                position: absolute;
+                right: 5px;
+                top: 5px;
+                padding: 0;
+                line-height: 0;
+                background-color: transparent;
+            }
+        }
     }
 }
