--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -22,7 +22,7 @@
   .theme-dark .filter-dropdown-group .filter-dropdown-menu, .theme-dark .filter-dropdown-menu .filter-form-content .custom-inp,
   .theme-dark .header-wrapper .right-block .my-acc-dropdown .dropdown-menu, .theme-dark .conect-wallet .walles-otr .wallet-btn,
   .theme-dark .change-pass-modal .modal-dialog .modal-content, .theme-dark .header-wrapper .right-block .notify-dropdown .dropdown-menu,
-  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn, .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu,
+  .theme-dark .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu,
   .theme-dark .body-wrapper .nav-block .nav-logo-wrapper, .theme-dark .portfolio-sec .portfolio-card-sm, .theme-dark .header-wrapper .header-title-block .dropdown-menu
    {
     background-color: #000; }
@@ -65,7 +65,7 @@
   .theme-dark .header-wrapper .right-block .notify-dropdown .notify-btn, .theme-dark .header-wrapper .right-block .buy-pros-block .buy-pros-btn,
   .theme-dark .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
     border: solid 1px #4E4E4E; }
-  .theme-dark .header-wrapper .wallet-btn, .theme-dark .card-sec .h-card-block .join-btn {
+  .theme-dark .card-sec .h-card-block .join-btn {
     background-color: #2966FF; }
   .theme-dark .header-wrapper .login-btn img, .theme-dark .portfolio-sec .portfolio-card .title-wrapper .title-block .title-icon img,
   .theme-dark .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-icon img,
@@ -622,5 +622,9 @@
       filter: none; }
   .theme-dark .custom-modal .inp-block-modal .custom-inp-disable {
     background-color: #242734 !important; }
+  .theme-dark .header-wrapper .wallet-btn-cover .wallet-btn-copy {
+    background-color: #282829; }
+    .theme-dark .header-wrapper .wallet-btn-cover .wallet-btn-copy img {
+      filter: grayscale(1) brightness(4); }
 
 /*# sourceMappingURL=dark-theme.css.map */
