--- a/css/side-nav.css
+++ b/css/side-nav.css
@@ -158,12 +158,15 @@
         justify-content: center;
         font-size: 15px; }
       .nav-block .navbar-collapse-block .mob-nav-btn-block .wallet-btn {
-        color: #fff;
-        background-color: #fff; }
+        background-color: transparent;
+        color: #4d6090;
+        border: solid 1px #4D6090; }
       .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn {
         margin-top: 15px;
         color: #292D32;
-        background-color: #fff; }
+        background-color: transparent;
+        color: #4d6090;
+        border: solid 1px #4D6090; }
         .nav-block .navbar-collapse-block .mob-nav-btn-block .login-btn img {
           margin-left: 25px; }
     .nav-block .navbar-collapse-block .wallet-btn-block-mob {
