--- a/scss/header.scss
+++ b/scss/header.scss
@@ -380,7 +380,7 @@
                 }
                 @media($sm-1481){
                     font-size: 13px;
-                    width: 145px;
+                    width: 130px;
                 }
                 .acc-label{
                     margin-left: 10px;
@@ -476,7 +476,7 @@
     }
     .theme-toggle-btn-block{
         display: inline-flex;
-        margin-right: 25px;
+        margin-right: 20px;
         @media (max-width: 1441px) {
             margin-right: 15px;
         }
@@ -579,7 +579,23 @@
         min-width: 150px;
     }
 }
-
+@media (max-width: 1800px) {
+    .header-wrapper .info-block{
+        font-size: 14px;
+    }
+    .header-wrapper .theme-toggle-btn-block{
+        margin-right: 15px;
+    }
+    .header-wrapper .right-block .buy-pros-dropdown{
+        margin-right: 10px;
+    }
+    .header-wrapper .info-block .info-val-end {
+        margin-left: 25px;
+    }
+    .header-wrapper .info-block {
+        margin-right: 20px;
+    }
+}
 @media($sm-1679){
     .header-wrapper .header-title-block .live-active{
         font-size: .875rem;
@@ -652,6 +668,12 @@
 }
 
 @media($sm-1481){
+    .header-wrapper .right-block .my-acc-dropdown .my-acc-btn {
+        width: 154px;
+    }
+    .header-wrapper .info-block{
+        font-size: 13px;
+    }
     .header-wrapper .header-title-block .live-active{
         font-size: .813rem;
     }
