--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -399,7 +399,7 @@
   .theme-dark .table-pagination-cover .select-block {
     color: #fff; }
     .theme-dark .table-pagination-cover .select-block .pagination-select {
-      border-color: #e3e4f3;
+      border-color: #3e3e3e;
       background-color: #000;
       color: #fff; }
   .theme-dark .table-pagination-cover .pagination .page-item .page-link {
