--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -619,7 +619,7 @@ $dark-block-2: #2B2C2E;
         .select-block{
             color: $primary-light;
             .pagination-select{
-                border-color: $border-grey;
+                border-color: #3e3e3e;
                 background-color: $dark-bg;
                 color: $primary-light;
             }
