--- a/css/header.css
+++ b/css/header.css
@@ -484,6 +484,9 @@
     min-width: 150px; }
 
 @media (max-width: 1800px) {
+  .header-wrapper .header-title-block .live-active {
+    font-size: .875rem; }
+
   .header-wrapper .info-block {
     font-size: 14px; }
 
