--- a/scss/header.scss
+++ b/scss/header.scss
@@ -580,6 +580,9 @@
     }
 }
 @media (max-width: 1800px) {
+    .header-wrapper .header-title-block .live-active {
+        font-size: .875rem;
+    }
     .header-wrapper .info-block{
         font-size: 14px;
     }
