--- a/css/staking.css
+++ b/css/staking.css
@@ -213,7 +213,7 @@
     border-radius: 6px; }
     @media (max-width: 1679px) {
       .card-section-outer .h-card-col .h-card-block {
-        padding: 25px 25px; } }
+        padding: 25px 20px; } }
     @media (max-width: 767px) {
       .card-section-outer .h-card-col .h-card-block {
         padding: 25px 19px; } }
@@ -390,18 +390,24 @@
     border: 1px solid #B6C3E5;
     font-size: 15px;
     font-weight: 500;
-    width: 47%;
+    width: 50%;
     padding: 9px;
     background: #fff;
     margin-right: 10px; }
     @media (max-width: 1679px) {
       .card-section-outer .top-block .btn-default {
+        margin-right: 5px;
         font-size: 13px; } }
+    @media (max-width: 1481px) {
+      .card-section-outer .top-block .btn-default {
+        font-size: 12px; } }
     @media (max-width: 450px) {
       .card-section-outer .top-block .btn-default {
         width: 100%;
         margin-bottom: 13px;
         margin-right: 0; } }
+  .card-section-outer .top-block .btn-duration {
+    margin-right: 0; }
   .card-section-outer .top-block .list-order-outer {
     margin-top: 20px; }
     .card-section-outer .top-block .list-order-outer .list-order {
