--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -295,7 +295,7 @@
             border-radius: 6px;
             @media(max-width:1679px)
             {
-                padding: 25px 25px;
+                padding: 25px 20px;
             }
             @media(max-width:767px)
             {
@@ -556,13 +556,17 @@
             border: 1px solid $border-grey-1;
             font-size: 15px;
             font-weight: 500;
-            width: 47%;
+            width: 50%;
             padding: 9px;
             background: #fff;
             margin-right: 10px;
             @media(max-width:1679px)
             {
+                margin-right: 5px;
                 font-size: 13px;
+            }
+            @media(max-width:1481px){
+                font-size: 12px;
             }
             @media(max-width:450px)
             {
@@ -570,6 +574,9 @@
                 margin-bottom: 13px;
                 margin-right: 0;
             }
+        }
+        .btn-duration{
+            margin-right: 0;
         }
         .list-order-outer {
             margin-top: 20px;
